tests/invalid/annotation_function_symbol_not_type/main.py
def helper(x: int) -> int:
    return x


def run_case() -> None:
    bad: helper = 1


if __name__ == "__main__":
    run_case()
